--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,11 @@
 @plugin "daisyui" {
   themes: luxury --default;
 }
+
+/* add safe-area */
+html {
+  margin-top: env(safe-area-inset-top);
+  margin-bottom: env(safe-area-inset-bottom);
+  margin-left: env(safe-area-inset-left);
+  margin-right: env(safe-area-inset-right);
+}
